--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -16,6 +16,7 @@
         <th>Gerenciar Usuários</th>
         <th>Cadastrar Fornecedores</th>
         <th>Criar Chamado</th>
+        <th>Atender Chamado</th>
         <th>Criar Categoria</th>
       </tr>
     </thead>
@@ -42,7 +43,7 @@
 
 
                 <% if(permission.user_registration==1){%>
-                  <td> <input name="user_registration" id=<%=permission.user.id %>  type="checkbox" checked
+                  <td> <input name="user_registration" id=<%=permission.user.id %> type="checkbox" checked
                     data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                   <% }else{ %>
                     <td> <input name="user_registration" id=<%=permission.user.id %> type="checkbox"
@@ -50,30 +51,38 @@
                     <% } %>
 
                       <% if(permission.supplier_registration==1){%>
-                        <td> <input name="supplier_registration" id=<%=permission.user.id %> 
+                        <td> <input name="supplier_registration" id=<%=permission.user.id %>
                           type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                         <% }else{ %>
-                          <td> <input name="supplier_registration" id=<%=permission.user.id %> 
+                          <td> <input name="supplier_registration" id=<%=permission.user.id %>
                             type="checkbox" unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                           <% } %>
 
                             <% if(permission.create_call==1){%>
-                              <td> <input name="create_call" id=<%=permission.user.id %>  type="checkbox"
+                              <td> <input name="create_call" id=<%=permission.user.id %> type="checkbox"
                                 checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                               <% }else{ %>
                                 <td> <input name="create_call" id=<%=permission.user.id %> type="checkbox"
                                   unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                                 <% } %>
 
-                                  <% if(permission.create_category==1){%>
-                                    <td> <input name="create_category" id=<%=permission.user.id %> 
-                                      type="checkbox" checked data-toggle="toggle" data-onstyle="success"
-                                      data-size="xs"></td>
+                                  <% if(permission.answer_call==1){%>
+                                    <td> <input name="answer_call" id=<%=permission.user.id %> type="checkbox"
+                                      checked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                                     <% }else{ %>
-                                      <td> <input name="create_category" id=<%=permission.user.id %> 
-                                        type="checkbox" unchecked data-toggle="toggle" data-onstyle="success"
-                                        data-size="xs"></td>
+                                      <td> <input name="answer_call" id=<%=permission.user.id %> type="checkbox"
+                                        unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                                       <% } %>
+
+                                        <% if(permission.create_category==1){%>
+                                          <td> <input name="create_category" id=<%=permission.user.id %>
+                                            type="checkbox" checked data-toggle="toggle" data-onstyle="success"
+                                            data-size="xs"></td>
+                                          <% }else{ %>
+                                            <td> <input name="create_category" id=<%=permission.user.id %>
+                                              type="checkbox" unchecked data-toggle="toggle" data-onstyle="success"
+                                              data-size="xs"></td>
+                                            <% } %>
 
 
         </tr>
@@ -95,7 +104,7 @@
                 }
               });
 
-            $('input:checkbox[name="user_registration"],input:checkbox[name="supplier_registration"],input:checkbox[name="create_call"],input:checkbox[name="create_category"]').change(
+            $('input:checkbox[name="user_registration"],input:checkbox[name="supplier_registration"],input:checkbox[name="create_call"],input:checkbox[name="answer_call"],input:checkbox[name="create_category"]').change(
               function () {
 
                 if ($(this).is(':checked')) {
