--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -81,6 +81,9 @@
           <li>
             <div class="dashimg"><a href="/users"><img src="../images/users.png">Usuários</a></div>
           </li>
+          <li>
+            <div class="dashimg"><a href="/departaments"><img src="../images/users.png">Departamentos</a></div>
+          </li>
           <% } %>
 
           <!--
