--- a/views/call/dashboard.ejs
+++ b/views/call/dashboard.ejs
@@ -79,7 +79,7 @@
       <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
         <img class="card-img-top" src="../images/danied-cuate.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">AGUARDANDO ATENDIMENTO</h5>
+          <h5 class="card-title">AGUARDANDO</h5>
           <a href="/call/pending" class="btn btn-danger">Visualizar <span class="badge badge-light" id="pendingBadge"><%= pending.length %></span></a>
         </div>
       </div>
