--- a/views/call/status.ejs
+++ b/views/call/status.ejs
@@ -10,6 +10,7 @@
     <tr style="background-color: #9e9e9e">
       <th scope="col">#</th>
       <th scope="col">Departamento</th>
+      <th scope="col">Assunto</th>
       <th scope="col">Status</th>
       <th scope="col">Categoria</th>
       <th scope="col">Solicitante</th>
@@ -29,6 +30,7 @@
           <tr>
           <td><%= call.id  %></td>
           <td><%= call.departament.toUpperCase() %></td>
+          <td><%= call.subject.substring(0, 30) %></td>
           <td><%= call.status %></td>
           <td><%= call.category %></td>
           <td><%= call.employee.name %></td>
