--- a/views/call/status.ejs
+++ b/views/call/status.ejs
@@ -2,16 +2,17 @@
 
 
 
-<a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+<a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
 <h1 style="margin-top:18px; font-weight:lighter">Chamados <%= tipo %></h1>
-
+<br>
+<div style="text-align: center;"> <a href="/call/dashboard" class="btn accept">Voltar</a> </div>
 <table id="myTable" class="table table-striped table-bordered">
   <thead>
     <tr style="background-color: #9e9e9e">
       <th scope="col">#</th>
       <th scope="col">Departamento</th>
       <th scope="col">Assunto</th>
-      <th scope="col">Status</th>
+      <th scope="col">Situação</th>
       <th scope="col">Categoria</th>
       <th scope="col">Solicitante</th>
       <th scope="col">Prioridade</th>
@@ -31,7 +32,7 @@
           <td><%= call.id  %></td>
           <td><%= call.departament.toUpperCase() %></td>
           <td><%= call.subject.substring(0, 30) %></td>
-          <td><%= call.status %></td>
+          <td><%= call.situation  != undefined ? call.situation : '--' %></td>
           <td><%= call.category %></td>
           <td><%= call.employee.name %></td>
           <td><%= call.priority %></td>
