--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <title>Compras</title>
+  <title>Chamados</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="/assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
