--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,20 +12,24 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"
+    type="text/javascript"></script>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <script src="https://cdn.datatables.net/2.0.2/js/dataTables.js"></script>
   <script src="https://cdn.datatables.net/2.0.2/css/dataTables.dataTables.css"></script>
 
   <!-- switch button bootstrap -->
-  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
+    rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
 
   <link rel="stylesheet" href="../../css/estiloPagamentos.css">
@@ -73,7 +77,7 @@
         </li>
         
         -->
-        
+
         <% if(user.permissions.user_registration==1){ %>
           <li>
             <div class="dashimg"><a href="/registrations_token"><img src="../images/useradd.png">Cadastro</a></div>
@@ -86,7 +90,7 @@
           </li>
           <% } %>
 
-          <!--
+            <!--
           
           <% //if(user.permissions.supplier_registration==1){ %>
             <li>
@@ -98,35 +102,42 @@
             <% //} %>
           
           -->
-            
 
-              <%if(user.permissions.create_call == 1 || user.permissions.create_category == 1){%>
-                <li>
-                  <div class="dashimg"><a href="/call/dashboard" style="text-align: center;">Chamados</a></div>
-                </li>
-                <%}%>
 
-              <%if(user.permissions.create_call == 1 ){%>
-               
-                <li>
-                  <div class="dashimg"><a href=" /call/create"><img src="../images/logout.png">Criar Chamado</a></div>
-                </li>
-               <%}%> 
+            <%if(user.permissions.create_call==1 || user.permissions.create_category==1){%>
+              <li>
+                <div class="dashimg"><a href="/call/dashboard" style="text-align: center;">Chamados</a></div>
+              </li>
+              <%}%>
 
-               <%if(user.permissions.create_category == 1 ){%> 
-                <li>
-                  <div class="dashimg"><a href="/category"><img src="../images/logout.png">Criar Categoria</a></div>
-                </li>
-               <%}%> 
+                <%if(user.permissions.create_call==1 ){%>
 
-                <li>
-                  <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Sair</a></div>
-                </li>
+                  <li>
+                    <div class="dashimg"><a href=" /call/create"><img src="../images/logout.png">Criar Chamado</a></div>
+                  </li>
+                  <%}%>
+
+                    <%if(user.permissions.create_category==1 ){%>
+                      <li>
+                        <div class="dashimg"><a href="/category"><img src="../images/logout.png">Criar Categoria</a>
+                        </div>
+                      </li>
+                      <%}%>
+
+                      <%if(user.permissions.type_cause == 1){%>
+                        <li>
+                          <div class="dashimg"><a href="/typesCauses"><img src="../images/logout.png">Criar Tipos/Causas</a>
+                          </div>
+                        </li>
+                        <%}%>
+                        <li>
+                          <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Sair</a></div>
+                        </li>
 
       </ul>
     </nav>
-  
-  <!--  
+
+    <!--  
    <script type="module">
       import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0.3/dist/web.js'
 
@@ -144,7 +155,7 @@
     </script>
      -->
     <div id="content" class="p-4 p-md-5 pt-5">
-  
- 
- 
+
+
+
       <!-- Page Content  -->
