--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -18,6 +18,7 @@
         <th>Criar Chamado</th>
         <th>Atender Chamado</th>
         <th>Criar Categoria</th>
+        <th>Tipo Causa</th>
       </tr>
     </thead>
     <tbody>
@@ -91,6 +92,15 @@
                                               type="checkbox" unchecked data-toggle="toggle" data-onstyle="success"
                                               data-size="xs"></td>
                                             <% } %>
+                                            <% if(permission.type_cause==1){%>
+                                              <td> <input name="type_cause" id=<%=permission.user.id %>
+                                                type="checkbox" checked data-toggle="toggle" data-onstyle="success"
+                                                data-size="xs"></td>
+                                              <% }else{ %>
+                                                <td> <input name="type_cause" id=<%=permission.user.id %>
+                                                  type="checkbox" unchecked data-toggle="toggle" data-onstyle="success"
+                                                  data-size="xs"></td>
+                                                <% } %>
 
 
         </tr>
@@ -112,7 +122,7 @@
                 }
               });
 
-            $('input:checkbox[name="user_registration"],input:checkbox[name="supplier_registration"],input:checkbox[name="create_call"],input:checkbox[name="answer_call"],input:checkbox[name="create_category"]').change(
+            $('input:checkbox[name="user_registration"],input:checkbox[name="supplier_registration"],input:checkbox[name="create_call"],input:checkbox[name="answer_call"],input:checkbox[name="type_cause"],input:checkbox[name="create_category"]').change(
               function () {
 
                 if ($(this).is(':checked')) {
