--- a/views/registrations/index.ejs
+++ b/views/registrations/index.ejs
@@ -13,10 +13,10 @@
           <input type="text" class="form-control item" name="token" value="<%= token %>">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control item" name="name" required placeholder="Informe o nome completo">
+          <input type="text" class="form-control item" name="name" required placeholder="Informe seu nome completo">
         </div>
         <div class="form-group">
-          <input type="email" id="email" class="form-control item" name="email" required placeholder="Informe o email">
+          <input type="email" id="email" class="form-control item" name="email" required placeholder="Informe seu email">
           <script type="text/javascript">
             $('#email').mask("A", {
               translation: {
@@ -29,17 +29,17 @@
           </script>
         </div>
         <div class="form-group">
-          <input type="password" class="form-control item" id="senha" name="password" required placeholder="Informe a senha">
+          <input type="password" class="form-control item" id="senha" name="password" required placeholder="Informe sua senha">
         </div>
         <div class="form-group">
           <input type="password" class="form-control item" id="newsenha" name="newsenha" required placeholder="Repita sua senha">
         </div>
         <div class="form-group">
-          <input type="text" data-mask='000.000.000-00' class="form-control item" name="cpf" required placeholder="Informe o CPF">
+          <input type="text" data-mask='000.000.000-00' class="form-control item" name="cpf" required placeholder="Informe seu CPF">
         </div>
         <div class="form-group">
           <select id="telefone" class="form-control" required>
-            <option value="" disabled="disabled" selected="selected" required>Selecione o tipo da linha</option>
+            <option value="" disabled="disabled" selected="selected" required>Selecione o tipo de telefone</option>
             <option value="Fixo">Fixo</option>
             <option value="Celular">Celular</option>
           </select>
@@ -47,14 +47,14 @@
         <div id="seltelefone">
         </div>
         <div class="form-group">
-          <input type="text" data-mask='00000-000' class="form-control item" name="cep" id="cep" required placeholder="Informe o cep">
+          <input type="text" data-mask='00000-000' class="form-control item" name="cep" id="cep" required placeholder="Cep da sua unidade">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control item" name="address" id="address" required placeholder="Informe o endereço">
+          <input type="text" class="form-control item" name="address" id="address" required placeholder="Endereço da sua unidade">
         </div>
         <div class="form-group">
           <select id="unidade" name="city" class="form-control" required>
-            <option value="" disabled="disabled" selected="selected" required>Selecione a Cidade</option>
+            <option value="" disabled="disabled" selected="selected" required>Cidade da sua unidade</option>
             <option value="Cachoeira do Sul">Cachoeira do Sul</option>
             <option value="Vera Cruz">Vera Cruz</option>
             <option value="Arroio do Tigre">Arroio do Tigre</option>
