--- a/views/partials/header_show_call.ejs
+++ b/views/partials/header_show_call.ejs
@@ -116,7 +116,7 @@
 
                 <%if(user.permissions.type_cause == 1){%>
                   <li>
-                    <div class="dashimg"><a href="/typesCauses"><img src="../images/logout.png">Criar Tipos/Causas</a>
+                    <div class="dashimg"><a href="/typesCauses"><img src="../../images/logout.png">Criar Tipos/Causas</a>
                     </div>
                   </li>
                   <%}%>
