--- a/views/call/show.ejs
+++ b/views/call/show.ejs
@@ -176,7 +176,7 @@
                 <option value="Comunicação Direta">Comunicação Direta</option>
               </select>
               <%}%>
-     
+     //busar no banco de dados a situação
               <label for="status">Situação</label>
               <select class="form-control" name="status">
                 <option value="" disabled="disabled" selected="selected">Selecione a situação</option>
