--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -130,6 +130,14 @@
                           </div>
                         </li>
                         <%}%>
+
+                        <% if(user.profile.description == "ti"){%>
+                          <li>
+                            <div class="dashimg"><a href="/situations"><img src="../images/logout.png">Criar Situações</a>
+                            </div>
+                          </li>
+                          <%}%>
+
                         <li>
                           <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Sair</a></div>
                         </li>
