--- a/views/payments/index.ejs
+++ b/views/payments/index.ejs
@@ -8,7 +8,7 @@
     </script>
     <% } %>
 
-      <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+      <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
       <div class="sobreposicaoForm">
         <h2 class='mb-4' style="width: 510px; background-color: #fff;">Autorização de Pagamentos Diversos</h2>
       </div>
