--- a/views/dashboard/reproved.ejs
+++ b/views/dashboard/reproved.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header.ejs') %>
-  <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+  <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
   <h1 style="margin-top:18px; font-weight:lighter">Solicitações Recusadas</h1>
 
   <table id="myTable" class="table table-striped table-bordered">
