--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,7 +64,7 @@
             </a>
           </li>
         </div>
-        <!--
+     
         
         <li>
           <div class="dashimg"><a href="/dashboard" style="text-align: center;">Compras e Pagamentos</a></div>
@@ -76,7 +76,7 @@
           <div class="dashimg"><a href="/payments"><img src="../images/dolar.png">Pagamentos</a></div>
         </li>
         
-        -->
+    
 
         <% if(user.permissions.user_registration==1){ %>
           <li>
@@ -90,18 +90,18 @@
           </li>
           <% } %>
 
-            <!--
           
-          <% //if(user.permissions.supplier_registration==1){ %>
+          
+          <% if(user.permissions.supplier_registration==1){ %>
             <li>
               <div class="dashimg"><a href=" /suppliers"><img src="../images/pacote.png">Fornecedores</a></div>
             </li>
             <li>
               <div class="dashimg"><a href=" /suppliers_register"><img src="../images/addforn.png">Cadastrar Fornecedor</a></div>
             </li>
-            <% //} %>
+            <% } %>
           
-          -->
+        
 
 
             <%if(user.permissions.create_call==1 || user.permissions.create_category==1){%>
