--- a/views/purchaseAndServices/index.ejs
+++ b/views/purchaseAndServices/index.ejs
@@ -14,7 +14,7 @@
     </script>
     <% } %>
 
-      <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top: -102px;margin-left: -25px;"></a>
+      <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top: -102px;margin-left: -25px;"></a>
       <div class="sobreposicaoFormC">
         <h2>Solicitação de Compras e Serviços</h2>
       </div>
