--- a/views/purchaseAndServices/revision_orcament.ejs
+++ b/views/purchaseAndServices/revision_orcament.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header.ejs') %>
-  <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px;"></a>
+  <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px;"></a>
 
   <% let formattedDate=new Date(purchase.createdAt).toLocaleDateString('pt-BR', { day: '2-digit' , month: '2-digit' , year: 'numeric' }); %>
 
