--- a/views/registrationsToken/index.ejs
+++ b/views/registrationsToken/index.ejs
@@ -12,7 +12,7 @@
             <label for="inputState">Tipo usuário:</label>
             <select name="length" id="inputState" class="form-control" required>
               <option value="" selected>Selecione</option>
-              <option value="5">Gerente</option>
+              <option value="5">Solicitante</option>
               <option value="6">Gestor</option>
               <option value="7">Diretor</option>
               <option value="8">Compras</option>
